--- a/src/main/resources/static/hello-static.html
+++ b/src/main/resources/static/hello-static.html
@@ -5,7 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-Hello
-<a href="/hello">hello</a>
+정적 컨텐츠 입니다.
 </body>
 </html>
